pagination for array responses